--- a/src/styles/future.css
+++ b/src/styles/future.css
@@ -1,35 +1,33 @@
 /* Timeline - Years */
 .timelines-years {
     top: 300px;
-    padding: 0 0 0 200px;
     margin: 0;
     white-space: nowrap;
-    border-top: 1px solid #282828;
+    border-top: 1px solid #FFFFFF30;
     list-style: none;
    /* Fix display: inline-block spacing issue */
     font-size: 0;
 }
 .timelines-years li {
     display: inline-block;
-    width: 200px;
-    color: #868686;
+    width: 175px;
+    color: '#010101';
     font-size: 15px;
-    line-height: 30px;
-    text-indent: -12px;
-}
-/* Display last year */
-.timelines-years li:last-child {
-    width: 100px;
+    line-height: 50px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-left: 1.5rem;
 }
 /* Timeline - Events */
 .timeline-events {
     top: 170px;
-    margin: 5rem 0 5rem 0;
-    padding: 0;
+    margin: 10rem 0 3rem 0;
     list-style: none;
     white-space: nowrap;
    /* Fix display: inline-block spacing issue */
     font-size: 0;
+
 }
 .timeline-events h2, .timeline-events h3, .timeline-events h4 {
     margin: 0 0 5px 0;
@@ -37,12 +35,11 @@
     font-size: 15px;
 }
 .timeline-events h2 {
-    color: #777;
+    color: '#010101';
     text-transform: uppercase;
 }
 .timeline-events h4 {
-    color: #fff;
-    font-style: italic;
+    color: '#010101';
 }
 .timeline-events li {
     position: relative;
@@ -50,32 +47,34 @@
 }
 .timeline-events li:before {
     position: absolute;
-    left: 0;
     bottom: -36px;
     height: 8px;
     border-radius: 8px;
     content: '';
 }
 .timeline-events li:nth-child(1) {
-    bottom: 0px;
+    bottom: 20px;
 }
 .timeline-events li:nth-child(2) {
-    bottom: 25px;
+    bottom: 35px;
 }
 .timeline-events li:nth-child(3) {
-    bottom: 40px;
+    bottom: 50px;
 }
 .timeline-events li:nth-child(4) {
-    bottom: 55px;
+    bottom: 65px;
 }
 .timeline-events li:nth-child(5) {
-    bottom: 70px;
+    bottom: 80px;
+}
+.timeline-events li:nth-child(6) {
+    bottom: 95px;
 }
 /* Timeline - Events - Colours */
 /* Grey/Green */
 .timeline-events li:nth-child(1):before {
     background: #c2e34e;
-    border-radius: 0 6px 6px 0;
+    border-radius: 6px 6px 6px 6px;
 }
 .timeline-events li:nth-child(1) h3 {
     color: #c2e34e;
@@ -104,10 +103,18 @@
 /* Aqua/Grey */
 .timeline-events li:nth-child(5):before {
     background: #4a8b8f;
-    border-radius: 6px 0 0 6px;
+    border-radius: 6px 6px 6px 6px;
 }
 .timeline-events li:nth-child(5) h3 {
     color: #4a8b8f;
+}
+/* Aqua/Grey */
+.timeline-events li:nth-child(6):before {
+    background: #00f2ff;
+    border-radius: 6px 6px 6px 6px;
+}
+.timeline-events li:nth-child(6) h3 {
+    color: #00f2ff;
 }
 /* Timeline - Events - Grid */
 /* X years */
@@ -116,15 +123,15 @@
 }
 /* X.5 years */
 .timeline-event-years-0-5, .timeline-event-years-0-5:before {
-    width: 50px;
+    width: 450px;
 }
 /* X years */
 .timeline-event-years-1, .timeline-event-years-1:before {
-    width: 100px;
+    width: 10px;
 }
 /* X.5 years */
 .timeline-event-years-1-5, .timeline-event-years-1-5:before {
-    width: 150px;
+    width: 10px;
 }
 /* X years */
 .timeline-event-years-2, .timeline-event-years-2:before {
@@ -136,49 +143,13 @@
 }
 /* X years */
 .timeline-event-years-3, .timeline-event-years-3:before {
-    width: 300px;
+    width: 280px;
 }
 /* X.5 years */
 .timeline-event-years-3-5, .timeline-event-years-3-5:before {
-    width: 350px;
+    width: 150px;
 }
 /* X years */
 .timeline-event-years-4, .timeline-event-years-4:before {
     width: 400px;
-}
-/* X.5 years */
-.timeline-event-years-4-5, .timeline-event-years-4-5:before {
-    width: 450px;
-}
-/* X years */
-.timeline-event-years-5, .timeline-event-years-5:before {
-    width: 500px;
-}
-/* X.5 years */
-.timeline-event-years-5-5, .timeline-event-years-5-5:before {
-    width: 550px;
-}
-/* X years */
-.timeline-event-years-6, .timeline-event-years-6:before {
-    width: 600px;
-}
-/* X.5 years */
-.timeline-event-years-6-5, .timeline-event-years-6-5:before {
-    width: 650px;
-}
-/* X years */
-.timeline-event-years-7, .timeline-event-years-7:before {
-    width: 700px;
-}
-/* X.5 years */
-.timeline-event-years-7-5, .timeline-event-years-7-5:before {
-    width: 750px;
-}
-/* X years */
-.timeline-event-years-8, .timeline-event-years-8:before {
-    width: 800px;
-}
-/* X.5 years */
-.timeline-event-years-8-5, .timeline-event-years-8-5:before {
-    width: 850px;
 }
