--- a/src/styles/countdown.css
+++ b/src/styles/countdown.css
@@ -1,4 +1,8 @@
 /* general styling */  
+
+:root {
+  --smaller: .5;
+}
   .container {
     margin: 0 auto;
     text-align: center;
@@ -20,4 +24,28 @@
   li span {
     display: block;
     font-size: 3.5rem;
+  }
+
+  .emoji {
+    display: none;
+    padding: 1rem;
+  }
+  
+  .emoji span {
+    font-size: 4rem;
+    padding: 0 .5rem;
+  }
+  
+  @media all and (max-width: 960px) {
+    h1 {
+      font-size: calc(1.5rem * var(--smaller));
+    }
+    
+    li {
+      font-size: calc(1.125rem * var(--smaller));
+    }
+    
+    li span {
+      font-size: calc(3.375rem * var(--smaller));
+    }
   }
