--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Baskervville&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -21,5 +23,5 @@ html {
 body {
 	color: var(--foreground);
 	background: var(--background);
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Baskervville', ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
 }
